# desphere

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  PROVENANCE.md  README.md  RELEASING.md  pyproject.toml
.github/workflows/: ci.yml  pages.yml  release.yml
docs/: RUST_PORT.md  SHORTEN.md  STATUS.md
oracles/: README.md  build_shorten.sh  build_w_decode.sh
rust/: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml
rust/examples/: sph2wav.rs
rust/src/: bitreader.rs  codecs.rs  error.rs  g711.rs  lib.rs  python.rs  shorten.rs  sphere.rs  transcode.rs  wasm.rs  wav.rs
rust/tests/: fixtures.rs  manifest.rs  robustness.rs
src/desphere/: __init__.py  cli.py  codecs.py  errors.py  shorten.py  sphere.py  transcode.py  wav.py
src/mercator/: __init__.py  cli.py  codecs.py  errors.py  g711.py  shorten.py  sphere.py  transcode.py  wav.py
tests/: conftest.py  test_api.py  test_failures.py  test_fixtures.py  test_g711.py  test_pcm.py  test_qlpc.py  test_robustness.py  test_shorten_local.py  test_sphere.py  test_ulaw_bitshift.py
tests/fixtures/: alaw_allcodes.sph  alaw_mono.sph  manifest.json  pcm16be_mono.sph  pcm16be_stereo.sph  pcm16le_mono.sph  pcm16le_stereo.sph  pcm32be_mono.sph  pcm32le_mono.sph  pcm8_mono.sph  qlpc_ar2.shn  qlpc_ar2_stereo.shn  qlpc_hi.shn  shorten_gate.sph  ulaw_allcodes.sph  ulaw_bitshift.shn  ulaw_bitshift.ulaw  ulaw_mono.sph
tools/: make_fixtures.py  make_qlpc_fixture.py  make_ulaw_bitshift_fixture.py  sphere_writer.py
web/: README.md  index.html
