[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "desphere"
version = "0.1.0"
description = "Clean-room NIST SPHERE (and Shorten) to RIFF/WAV transcoder"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "Uriel Cohen Priva" }]
keywords = ["sphere", "nist", "shorten", "wav", "riff", "audio", "transcode", "sph2pipe"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Sound/Audio :: Conversion",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
sph2wav = "desphere.cli:main"

[project.urls]
Homepage = "https://github.com/ucpresearch/desphere"

[tool.hatch.build.targets.wheel]
packages = ["src/desphere"]

[tool.pytest.ini_options]
testpaths = ["tests"]
