[package]
name = "desphere"
version = "0.0.1"
edition = "2021"
description = "Clean-room NIST SPHERE (and Shorten) to RIFF/WAV transcoder"
license = "MIT"
repository = "https://github.com/ucpresearch/desphere"

# Rust port of the Python reference in ../src/desphere. The Python is the spec;
# this must reproduce its output bit-for-bit (see ../docs/RUST_PORT.md). For
# formantwise-pipe to import and for WASM. Dependency-free, like the Python.

[lib]
name = "desphere"
path = "src/lib.rs"

[dependencies]

# Test-only: parse the shared fixture manifest. The library itself stays
# dependency-free; this does not affect downstream crates.
[dev-dependencies]
serde_json = "1"
