[package]
name = "desphere"
version = "0.1.0"
edition = "2021"
rust-version = "1.74"
description = "Clean-room NIST SPHERE (and Shorten) to RIFF/WAV transcoder"
license = "MIT"
authors = ["Uriel Cohen Priva"]
repository = "https://github.com/ucpresearch/desphere"
readme = "README.md"
keywords = ["sphere", "nist", "shorten", "wav", "audio"]
categories = ["multimedia::audio", "encoding", "parser-implementations"]
exclude = ["/pkg"]

# Rust port of the Python reference in ../src/desphere. The Python is the spec;
# this must reproduce its output bit-for-bit (see ../docs/RUST_PORT.md). For a
# Rust client to import and for WASM. Dependency-free, like the Python.

[lib]
name = "desphere"
path = "src/lib.rs"
# rlib so a Rust client can import it as a crate; cdylib for the wasm
# and python (pyo3) targets.
crate-type = ["rlib", "cdylib"]

[features]
# The core library is dependency-free. Bindings are opt-in features so they
# never burden a plain Rust dependant.
wasm = ["dep:wasm-bindgen"]
python = ["dep:pyo3"]

[dependencies]
wasm-bindgen = { version = "0.2", optional = true }
pyo3 = { version = "0.23", optional = true, features = ["extension-module"] }

# Test-only: parse the shared fixture manifest. The library itself stays
# dependency-free; this does not affect downstream crates.
[dev-dependencies]
serde_json = "1"
